logs/validate.20260408-041730.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:168:25
    |
168 |                 implies #[trigger] new_table.drop_last()[j] == old_table.drop_last()[j] by {
    |                         ^

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:988:30
    |
988 |     impl std::fmt::Debug for DoubleHashFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `DoubleHashFlatHashTableStEph` in this scope
   --> src/Chap47/DoubleHashFlatHashTableStEph.rs:994:32
    |
994 |     impl std::fmt::Display for DoubleHashFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 4522MB, peak z3 RSS: 134MB, min free: 21793MB
Sampled CPU Usage: rust_verify: 88s, z3 children: 101s
